// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeliveryModal renders correctly when not open 1`] = `
<div>
  <div
    id="content"
  />
  <div
    data-target-tag-name="DIV"
    id="target"
  />
</div>
`;

exports[`DeliveryModal renders correctly when open and delivery date selected 1`] = `
<div>
  <div
    id="content"
  >
    <div
      className="ReactModal__Overlay ReactModal__Overlay--after-open modal-overlay"
      onClick={[Function]}
      onMouseDown={[Function]}
      style={Object {}}
    >
      <div
        aria-label="Add To Cart Modal"
        className="ReactModal__Content ReactModal__Content--after-open modal"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="dialog"
        style={Object {}}
        tabIndex="-1"
      >
        <div
          className="modal-content"
        >
          <div
            className="grid-x"
          >
            <div
              className="content-container"
            >
              <div
                className="cell small-12 title"
              >
                <h2>
                  Change Your Delivery
                </h2>
              </div>
              <div
                className="cell small-12"
              >
                <div
                  className="grid-x grid-margin-x grid-margin-y"
                >
                  <div
                    className="horizontal-center cell small-12 medium-4 medium-offset-2"
                  />
                </div>
              </div>
              <div
                className="cell radio-container small-12"
              >
                <input
                  aria-invalid={null}
                  className="text-me"
                  id="deliver"
                  name="deliver"
                  onChange={[Function]}
                  onClick={[Function]}
                  placeholder=""
                  type="radio"
                  value={true}
                />
                <span>
                  <span
                    className="radio-label"
                  />
                </span>
                <img
                  alt=""
                  aria-hidden="true"
                  className="icon shipping"
                  role="presentation"
                  src="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%25%22%20height%3D%22100%25%22%20viewBox%3D%220%200%2096.4%2049.1%22%3E%3Ctitle%3Eicon-shipping%3C%2Ftitle%3E%3Cg%20id%3D%22Layer_2%22%20data-name%3D%22Layer%202%22%3E%3Cg%20id%3D%22Layer_1-2%22%20data-name%3D%22Layer%201%22%3E%3Cpath%20d%3D%22M26.3%2C43.2H33a1.27%2C1.27%2C0%2C0%2C0%2C.6-.1%2C7%2C7%2C0%2C0%2C0%2C13.8.1h28a7%2C7%2C0%2C0%2C0%2C13.8%2C0h5.5a1.75%2C1.75%2C0%2C0%2C0%2C1.7-1.7V22.8c0-4.8-1.3-8.7-3.9-11.5a12.75%2C12.75%2C0%2C0%2C0-9.5-4H73V1.7A1.75%2C1.75%2C0%2C0%2C0%2C71.3%2C0h-45a1.75%2C1.75%2C0%2C0%2C0-1.7%2C1.7V41.5A1.75%2C1.75%2C0%2C0%2C0%2C26.3%2C43.2Zm56%2C2.4A3.6%2C3.6%2C0%2C1%2C1%2C85.9%2C42%2C3.59%2C3.59%2C0%2C0%2C1%2C82.3%2C45.6ZM73%2C10.7H83c6.2%2C0%2C10%2C4.6%2C10%2C12v17H88.9A7.14%2C7.14%2C0%2C0%2C0%2C82.3%2C35a7%2C7%2C0%2C0%2C0-6.6%2C4.7H73.1v-29ZM40.6%2C45.6A3.6%2C3.6%2C0%2C1%2C1%2C44.2%2C42%2C3.72%2C3.72%2C0%2C0%2C1%2C40.6%2C45.6ZM28%2C3.4H69.5V39.7H47.8a1.27%2C1.27%2C0%2C0%2C0-.6.1A7%2C7%2C0%2C0%2C0%2C40.5%2C35a7.12%2C7.12%2C0%2C0%2C0-6.7%2C4.9%2C1.88%2C1.88%2C0%2C0%2C0-.8-.2H28ZM0%2C11.8a1.75%2C1.75%2C0%2C0%2C1%2C1.7-1.7H18.1a1.7%2C1.7%2C0%2C0%2C1%2C0%2C3.4H1.7A1.75%2C1.75%2C0%2C0%2C1%2C0%2C11.8ZM18.1%2C23.3H4.3a1.7%2C1.7%2C0%2C0%2C1%2C0-3.4H18.1a1.7%2C1.7%2C0%2C0%2C1%2C0%2C3.4Zm-13.2%2C8a1.75%2C1.75%2C0%2C0%2C1%2C1.7-1.7H18A1.7%2C1.7%2C0%2C1%2C1%2C18%2C33H6.6A1.63%2C1.63%2C0%2C0%2C1%2C4.9%2C31.3Z%22%2F%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
                />
                <div
                  className="delivery-selection"
                >
                  <div
                    className="prof-delivery"
                  >
                    Professional delivery and set-up to any room
                  </div>
                  <p
                    className="bold"
                  >
                    $
                  </p>
                  <p
                    className="delivered-on"
                  >
                    Delivered on:
                  </p>
                  <p
                    className="bold margin-left"
                  >
                    July 27
                  </p>
                  <p
                    className="bold"
                  >
                    4 hour delivery window
                  </p>
                  <p
                    className="automated-message"
                  >
                    Our automated system will call 2 days prior to notify you of the estimated delivery window.
                  </p>
                </div>
              </div>
            </div>
            <div
              className="update-container cell small-12"
            >
              
              <button
                aria-label="Update Delivery"
                className="update-delivery"
                onClick={[Function]}
                tabIndex="0"
                value="Update Delivery"
              >
                update delivery
              </button>
            </div>
            <button
              aria-label="Close"
              className="close-modal"
              onClick={[MockFunction]}
              tabIndex="0"
              value="Close"
            >
              <img
                alt="close icon"
                className="icon close"
                src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23FFFFFF' d='M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z' /%3E%3C/svg%3E"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-target-tag-name="DIV"
    id="target"
  />
</div>
`;

exports[`DeliveryModal renders correctly when open and express delivery date selected 1`] = `
<div>
  <div
    id="content"
  >
    <div
      className="ReactModal__Overlay ReactModal__Overlay--after-open modal-overlay"
      onClick={[Function]}
      onMouseDown={[Function]}
      style={Object {}}
    >
      <div
        aria-label="Add To Cart Modal"
        className="ReactModal__Content ReactModal__Content--after-open modal"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="dialog"
        style={Object {}}
        tabIndex="-1"
      >
        <div
          className="modal-content"
        >
          <div
            className="grid-x"
          >
            <div
              className="content-container"
            >
              <div
                className="cell small-12 title"
              >
                <h2>
                  Change Your Delivery
                </h2>
              </div>
              <div
                className="cell small-12"
              >
                <div
                  className="grid-x grid-margin-x grid-margin-y"
                >
                  <div
                    className="horizontal-center cell small-12 medium-4 medium-offset-2"
                  />
                </div>
              </div>
              <div
                className="cell radio-container small-12"
              >
                <input
                  aria-invalid={null}
                  className="text-me"
                  id="deliver"
                  name="deliver"
                  onChange={[Function]}
                  onClick={[Function]}
                  placeholder=""
                  type="radio"
                  value={true}
                />
                <span>
                  <span
                    className="radio-label"
                  />
                </span>
                <img
                  alt=""
                  aria-hidden="true"
                  className="icon shipping"
                  role="presentation"
                  src="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%25%22%20height%3D%22100%25%22%20viewBox%3D%220%200%2096.4%2049.1%22%3E%3Ctitle%3Eicon-shipping%3C%2Ftitle%3E%3Cg%20id%3D%22Layer_2%22%20data-name%3D%22Layer%202%22%3E%3Cg%20id%3D%22Layer_1-2%22%20data-name%3D%22Layer%201%22%3E%3Cpath%20d%3D%22M26.3%2C43.2H33a1.27%2C1.27%2C0%2C0%2C0%2C.6-.1%2C7%2C7%2C0%2C0%2C0%2C13.8.1h28a7%2C7%2C0%2C0%2C0%2C13.8%2C0h5.5a1.75%2C1.75%2C0%2C0%2C0%2C1.7-1.7V22.8c0-4.8-1.3-8.7-3.9-11.5a12.75%2C12.75%2C0%2C0%2C0-9.5-4H73V1.7A1.75%2C1.75%2C0%2C0%2C0%2C71.3%2C0h-45a1.75%2C1.75%2C0%2C0%2C0-1.7%2C1.7V41.5A1.75%2C1.75%2C0%2C0%2C0%2C26.3%2C43.2Zm56%2C2.4A3.6%2C3.6%2C0%2C1%2C1%2C85.9%2C42%2C3.59%2C3.59%2C0%2C0%2C1%2C82.3%2C45.6ZM73%2C10.7H83c6.2%2C0%2C10%2C4.6%2C10%2C12v17H88.9A7.14%2C7.14%2C0%2C0%2C0%2C82.3%2C35a7%2C7%2C0%2C0%2C0-6.6%2C4.7H73.1v-29ZM40.6%2C45.6A3.6%2C3.6%2C0%2C1%2C1%2C44.2%2C42%2C3.72%2C3.72%2C0%2C0%2C1%2C40.6%2C45.6ZM28%2C3.4H69.5V39.7H47.8a1.27%2C1.27%2C0%2C0%2C0-.6.1A7%2C7%2C0%2C0%2C0%2C40.5%2C35a7.12%2C7.12%2C0%2C0%2C0-6.7%2C4.9%2C1.88%2C1.88%2C0%2C0%2C0-.8-.2H28ZM0%2C11.8a1.75%2C1.75%2C0%2C0%2C1%2C1.7-1.7H18.1a1.7%2C1.7%2C0%2C0%2C1%2C0%2C3.4H1.7A1.75%2C1.75%2C0%2C0%2C1%2C0%2C11.8ZM18.1%2C23.3H4.3a1.7%2C1.7%2C0%2C0%2C1%2C0-3.4H18.1a1.7%2C1.7%2C0%2C0%2C1%2C0%2C3.4Zm-13.2%2C8a1.75%2C1.75%2C0%2C0%2C1%2C1.7-1.7H18A1.7%2C1.7%2C0%2C1%2C1%2C18%2C33H6.6A1.63%2C1.63%2C0%2C0%2C1%2C4.9%2C31.3Z%22%2F%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
                />
                <div
                  className="delivery-selection"
                >
                  <div
                    className="prof-delivery"
                  >
                    Professional delivery and set-up to any room
                  </div>
                  <p
                    className="bold"
                  >
                    $
                  </p>
                  <p
                    className="delivered-on"
                  >
                    Delivered on:
                  </p>
                  <p
                    className="bold margin-left"
                  >
                    July 27
                  </p>
                  <p
                    className="bold"
                  >
                    4 hour delivery window
                  </p>
                </div>
              </div>
            </div>
            <div
              className="update-container cell small-12"
            >
              
              <button
                aria-label="Update Delivery"
                className="update-delivery"
                onClick={[Function]}
                tabIndex="0"
                value="Update Delivery"
              >
                update delivery
              </button>
            </div>
            <button
              aria-label="Close"
              className="close-modal"
              onClick={[MockFunction]}
              tabIndex="0"
              value="Close"
            >
              <img
                alt="close icon"
                className="icon close"
                src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23FFFFFF' d='M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z' /%3E%3C/svg%3E"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-target-tag-name="DIV"
    id="target"
  />
</div>
`;

exports[`DeliveryModal renders correctly when open and pickup date selected 1`] = `
<div>
  <div
    id="content"
  >
    <div
      className="ReactModal__Overlay ReactModal__Overlay--after-open modal-overlay"
      onClick={[Function]}
      onMouseDown={[Function]}
      style={Object {}}
    >
      <div
        aria-label="Add To Cart Modal"
        className="ReactModal__Content ReactModal__Content--after-open modal"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="dialog"
        style={Object {}}
        tabIndex="-1"
      >
        <div
          className="modal-content"
        >
          <div
            className="grid-x"
          >
            <div
              className="content-container"
            >
              <div
                className="cell small-12 title"
              >
                <h2>
                  Change Your Delivery
                </h2>
              </div>
              <div
                className="cell small-12"
              >
                <div
                  className="grid-x grid-margin-x grid-margin-y"
                >
                  <div
                    className="horizontal-center cell small-12 medium-4 medium-offset-2"
                  />
                </div>
              </div>
              <div
                className="cell radio-container small-12"
              >
                <input
                  aria-invalid={null}
                  className="text-me"
                  id="deliver"
                  name="deliver"
                  onChange={[Function]}
                  onClick={[Function]}
                  placeholder=""
                  type="radio"
                  value={true}
                />
                <span>
                  <span
                    className="radio-label"
                  />
                </span>
                <img
                  alt=""
                  aria-hidden="true"
                  className="icon shipping"
                  role="presentation"
                  src="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%25%22%20height%3D%22100%25%22%20viewBox%3D%220%200%2096.4%2049.1%22%3E%3Ctitle%3Eicon-shipping%3C%2Ftitle%3E%3Cg%20id%3D%22Layer_2%22%20data-name%3D%22Layer%202%22%3E%3Cg%20id%3D%22Layer_1-2%22%20data-name%3D%22Layer%201%22%3E%3Cpath%20d%3D%22M26.3%2C43.2H33a1.27%2C1.27%2C0%2C0%2C0%2C.6-.1%2C7%2C7%2C0%2C0%2C0%2C13.8.1h28a7%2C7%2C0%2C0%2C0%2C13.8%2C0h5.5a1.75%2C1.75%2C0%2C0%2C0%2C1.7-1.7V22.8c0-4.8-1.3-8.7-3.9-11.5a12.75%2C12.75%2C0%2C0%2C0-9.5-4H73V1.7A1.75%2C1.75%2C0%2C0%2C0%2C71.3%2C0h-45a1.75%2C1.75%2C0%2C0%2C0-1.7%2C1.7V41.5A1.75%2C1.75%2C0%2C0%2C0%2C26.3%2C43.2Zm56%2C2.4A3.6%2C3.6%2C0%2C1%2C1%2C85.9%2C42%2C3.59%2C3.59%2C0%2C0%2C1%2C82.3%2C45.6ZM73%2C10.7H83c6.2%2C0%2C10%2C4.6%2C10%2C12v17H88.9A7.14%2C7.14%2C0%2C0%2C0%2C82.3%2C35a7%2C7%2C0%2C0%2C0-6.6%2C4.7H73.1v-29ZM40.6%2C45.6A3.6%2C3.6%2C0%2C1%2C1%2C44.2%2C42%2C3.72%2C3.72%2C0%2C0%2C1%2C40.6%2C45.6ZM28%2C3.4H69.5V39.7H47.8a1.27%2C1.27%2C0%2C0%2C0-.6.1A7%2C7%2C0%2C0%2C0%2C40.5%2C35a7.12%2C7.12%2C0%2C0%2C0-6.7%2C4.9%2C1.88%2C1.88%2C0%2C0%2C0-.8-.2H28ZM0%2C11.8a1.75%2C1.75%2C0%2C0%2C1%2C1.7-1.7H18.1a1.7%2C1.7%2C0%2C0%2C1%2C0%2C3.4H1.7A1.75%2C1.75%2C0%2C0%2C1%2C0%2C11.8ZM18.1%2C23.3H4.3a1.7%2C1.7%2C0%2C0%2C1%2C0-3.4H18.1a1.7%2C1.7%2C0%2C0%2C1%2C0%2C3.4Zm-13.2%2C8a1.75%2C1.75%2C0%2C0%2C1%2C1.7-1.7H18A1.7%2C1.7%2C0%2C1%2C1%2C18%2C33H6.6A1.63%2C1.63%2C0%2C0%2C1%2C4.9%2C31.3Z%22%2F%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
                />
                <div
                  className="delivery-selection"
                >
                  <div
                    className="prof-delivery"
                  >
                    Professional delivery and set-up to any room
                  </div>
                  <p
                    className="bold"
                  >
                    $
                  </p>
                  <p
                    className="delivered-on"
                  >
                    Delivered on:
                  </p>
                  <p
                    className="bold margin-left"
                  >
                    July 27
                  </p>
                  <p
                    className="bold"
                  >
                    4 hour delivery window
                  </p>
                  <p
                    className="automated-message"
                  >
                    Our automated system will call 2 days prior to notify you of the estimated delivery window.
                  </p>
                </div>
              </div>
            </div>
            <div
              className="update-container cell small-12"
            >
              
              <button
                aria-label="Update Delivery"
                className="update-delivery"
                onClick={[Function]}
                tabIndex="0"
                value="Update Delivery"
              >
                update delivery
              </button>
            </div>
            <button
              aria-label="Close"
              className="close-modal"
              onClick={[MockFunction]}
              tabIndex="0"
              value="Close"
            >
              <img
                alt="close icon"
                className="icon close"
                src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23FFFFFF' d='M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z' /%3E%3C/svg%3E"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-target-tag-name="DIV"
    id="target"
  />
</div>
`;
